plugins {
    id 'java'
}

group = 'one.keluarganaga'
version = '1.4.0'

repositories {
    maven {
        name = 'papermc'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    mavenCentral()
}

dependencies {
    compileOnly 'com.velocitypowered:velocity-api:4.1.0-SNAPSHOT'
    annotationProcessor 'com.velocitypowered:velocity-api:4.1.0-SNAPSHOT'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
    options.compilerArgs.addAll([
        '--add-modules',
        'jdk.httpserver'
    ])
}

jar {
    archiveBaseName = 'CalagopusAutoPower'
}
